# candle-demo

./: Cargo.toml  Dockerfile  Makefile  cook.ipynb
candle/: Cargo.toml
candle/src/: compute_cap.rs  lib.rs
candle/src/layers/: layer_norm.rs  linear.rs  mod.rs
candle/src/models/: bert.rs  mod.rs
src/: download.rs  error.rs  infer.rs  main.rs  tokenization.rs
